--- a/src/main/java/com/leonardo/GYM/informes/AccesosCliente.jrxml
+++ b/src/main/java/com/leonardo/GYM/informes/AccesosCliente.jrxml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="AccesosCliente" language="groovy" pageWidth="595" pageHeight="842" columnWidth="555" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" uuid="ba2589a1-1576-4184-8fb9-3f0a6af05032">
+<jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="AccesosCliente" language="java" pageWidth="595" pageHeight="842" columnWidth="555" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" uuid="ba2589a1-1576-4184-8fb9-3f0a6af05032">
 	<property name="ireport.zoom" value="1.6105100000000039"/>
 	<property name="ireport.x" value="0"/>
 	<property name="ireport.y" value="0"/>
@@ -204,7 +204,7 @@ WHERE Clientes.`id_cliente`=$P{idCliente}]]>
 		<band height="95" splitType="Stretch">
 			<image>
 				<reportElement x="282" y="0" width="273" height="95" uuid="b0a40ee9-6594-4fcb-b4f9-820afd50ddb2"/>
-				<imageExpression><![CDATA["C:\\Users\\dilbe\\Downloads\\LogoAcesos.jpg"]]></imageExpression>
+				<imageExpression><![CDATA[".\\src\\main\\resources\\imagenes\\LogoAcesos.png"]]></imageExpression>
 			</image>
 		</band>
 	</pageHeader>
